--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,4 @@
+/*elementos base*/
 :root{
     --vermelho: #E50914;
     --preto: #141414;
@@ -12,6 +13,7 @@
 body{
     background: var(--preto);
     font-family: 'Times New Roman', 'Times New Roman', Times, serif;
+    color: var(--branco);
 }
 header .container{
    display: flex;
@@ -32,4 +34,25 @@ header nav a{
 }
 header nav a:hover{
 color: var(--branco);
+}
+
+/*filme principal*/
+.filme-principal{
+    font-size: 16px;
+    background:linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50) 100%), url('/img/el-bruxo.jpg');
+   
+    height: 400px;
+    background-size: cover;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.filme-principal .descricao{
+    margin-bottom: 40px;
+}
+.titulo{
+    font-size: 40px;
 }
