--- a/style/style.css
+++ b/style/style.css
@@ -35,7 +35,6 @@ header nav a{
 header nav a:hover{
 color: var(--branco);
 }
-
 /*filme principal*/
 .filme-principal{
     font-size: 16px;
@@ -49,10 +48,31 @@ color: var(--branco);
     justify-content: center;
     align-items: flex-start;
 }
-
 .filme-principal .descricao{
+    margin-top: 10px;
     margin-bottom: 40px;
 }
-.titulo{
+.filme-principal .titulo{
+    margin-top: 15%;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 40px;
+}
+.botao{
+    background-color: rgba(0,0,0, .50);
+    border:none;
+    color: var(--branco);
+
+    padding: 15px 30px;
+    margin-right: 15px;
+    font-size: 12px;
+
+    cursor: pointer;
+    transition: .3s ease all;
+}
+.botao:hover{
+    background-color: var(--branco);
+    color: var(--preto);
+}
+.botao i{
+    margin-right: 5px;
 }
